# 20240003-easyassign-llvm

./: .gitignore  README.md
02-code/: CMakeLists.txt
02-code/libs/ConfReader/: CMakeLists.txt
02-code/libs/ConfReader/include/: ConfReader.h  Config.h
02-code/libs/ConfReader/src/: ConfReader.cpp  Config.cpp
02-code/libs/DatabaseConnection/: CMakeLists.txt
02-code/libs/DatabaseConnection/include/: DatabaseConnection.h
02-code/libs/DatabaseConnection/src/: DatabaseConnection.cpp
02-code/libs/Logger/: CMakeLists.txt
02-code/libs/Logger/include/: Logger.h
02-code/libs/Logger/src/: Logger.cpp
02-code/libs/Stopwatch/: CMakeLists.txt
02-code/libs/Stopwatch/include/: Stopwatch.h
02-code/libs/Stopwatch/src/: Stopwatch.cpp
02-code/libs/jsoncpp/: CMakeLists.txt
02-code/libs/jsoncpp/include/json/: config.h  reader.h  value.h  writer.h
02-code/libs/jsoncpp/src/test_lib_json/: CMakeLists.txt
02-code/libs/zlib/bld/debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake
02-code/libs/zlib/bld/debug/.cmake/api/v1/reply/: cache-v2-7d5d34d114505a88c4b2.json  cmakeFiles-v1-d112ff928fb74a6ab3d5.json  codemodel-v2-4201000f25cdeb784989.json  directory-.-Debug-6b5e9592e9c5c3853e13.json  index-2024-06-03T14-32-25-0817.json  target-example-Debug-e85e6329921eaa3ea77a.json  target-example64-Debug-32b8c045ba216ce3d4c0.json  target-minigzip-Debug-e66aa7de6d05d684e9f0.json  target-minigzip64-Debug-9bb351420a8d72c0017f.json  target-zlib-Debug-6ee8ff0fdb3b9c860769.json  target-zlibstatic-Debug-9afdd61ee0a177b66fe2.json
02-code/libs/zlib/bld/release/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake
02-code/libs/zlib/bld/release/.cmake/api/v1/reply/: cache-v2-47881b2cf38772165865.json  cmakeFiles-v1-7a8786debe76ac23efea.json  codemodel-v2-9408d48c8845dc7b936f.json  directory-.-Release-68560abef0fa664caf2f.json  index-2024-06-03T14-32-25-0829.json  target-example-Release-dee48aa18268a1799ce7.json  target-example64-Release-e1e1cbaa9d6d6c751284.json  target-minigzip-Release-738a4bce5e6a14ae7692.json  target-minigzip64-Release-76a94525175bae26aa5a.json  target-zlib-Release-ed5fdaca4b5f2525f66c.json  target-zlibstatic-Release-57ed67cf1af046831e8d.json  toolchains-v1-2939e85bf852a1681b36.json
02-code/src/: Version.h.in  version.rc.in
02-code/src/EasyAssign/: CMakeLists.txt
02-code/src/EasyAssign/include/: Assignment.h  Matrix.h  Network.h
02-code/src/EasyAssign/src/: Assignment.cpp  EasyAssign.cpp  Matrix.cpp  Network.cpp
